# Video_Selection

./: CMakeLists.txt  config.cfg  main.cpp
functions/: config_functs.hpp  load_functs.hpp  play_functs.hpp  start_programs.hpp
mpv_programs/: kill_mpv.sh  play_from_path.sh  start_loop.sh
structures/: data_structures.hpp  paths.hpp
